# invest-evolution

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  __init__.py  agents.py  allocator.py  brain_bridge.py  brain_memory.py  brain_plugins.py  brain_runtime.py  brain_scheduler.py  brain_tools.py  commander.py  config.py  core.py  data.py  data_datasets.py  data_ingestion.py  data_quality.py  data_repository.py  debate.py  evaluation.py  findings.md  gunicorn.conf.py  leaderboard.py  llm_gateway.py  llm_router.py  meetings.py  optimization.py  progress.md  pyproject.toml  pytest.ini  requirements.txt  sync_data.py  task_plan.md  trading.py  train.py  (+3 more)
.learnings/: ERRORS.md  LEARNINGS.md
agent_settings/: README.md  agents_config.json
app/: commander.py  commander_domain_catalog.py  commander_identity_support.py  commander_observability.py  commander_plugin_support.py  commander_runtime_lifecycle_support.py  commander_runtime_mutation_support.py  commander_runtime_query_support.py  commander_services.py  commander_status_support.py  commander_training_support.py  commander_workflow_support.py  freeze_gate.py  frontend_contract_catalog.py  frontend_contract_tools.py  investment_body_service.py  llm_gateway.py  llm_router.py  research_services.py  runtime_artifact_reader.py  runtime_contract_catalog.py  runtime_contract_tools.py  stock_analysis.py  stock_analysis_batch_service.py  stock_analysis_research_resolution_service.py  stock_analysis_research_services.py  stock_analysis_services.py  stock_analysis_support_services.py  strategy_gene_registry.py  train.py  web_command_routes.py  web_data_routes.py  web_ops_routes.py  web_server.py  web_ui_metadata.py  web_ui_runtime.py
brain/: __init__.py  bridge.py  file_io.py  guardrails.py  memory.py  message_envelope.py  planner_catalog.py  plugins.py  presentation.py  runtime.py  scheduler.py  schema_contract.py  structured_output.py  task_bus.py  tool_contracts.py  tool_metadata.py  tools.py  transcript_snapshot.py
config/: __init__.py  agent_prompt_defaults.py  control_plane.local.yaml.example  control_plane.py  control_plane.yaml  control_plane.yaml.example  evolution.local.yaml.example  evolution.yaml  evolution.yaml.example  services.py  web_ui.py
data/: industry_map.json
docs/: AGENT_INTERACTION.md  ARCHITECTURE_DIAGRAM.md  CHANGE_NOTES_2026-03-23_training_contract_rollout.md  COMPATIBILITY_SURFACE.md  COMPAT_CLEANUP_PLAN.md  COMPAT_CLEANUP_REPORT.md  CONFIG_GOVERNANCE.md  DATABASE_UPGRADE_V2.md  DATA_ACCESS_ARCHITECTURE.md  DATA_LAYER_UNIFICATION_PLAN.md  DATA_LAYER_UNIFICATION_REPORT.md  FRONTEND_BACKEND_SPLIT_BLUEPRINT.md  FRONTEND_REFACTOR_EXECUTION_PLAN.md  GOVERNANCE_RECOVERY_BLUEPRINT_2026-03-24.md  GOVERNANCE_RECOVERY_CHANGE_SUMMARY_2026-03-24.md  INVEST_REFACTOR_BLUEPRINT.md  INVEST_V2_EXECUTION_PLAN.md  MAIN_FLOW.md  NANOBOT_FUSION_ARCHITECTURE.md  ONBOARDING_HANDOFF.md  OPTIMIZATION_TRIGGER_MATRIX.md  PERFORMANCE_BENCHMARK_GOVERNANCE.md  PROJECT_ARCHITECTURE_BLUEPRINT.md  PROJECT_AUDIT_20260310.md  PROJECT_REMEDIATION_ACTION_PLAN_20260312.md  PROJECT_REVIEW_REPORT_20260312.md  README.md  RELEASE_READINESS.md  RESEARCH_ENGINE_UNIFICATION_EXECUTION_BLUEPRINT_20260312.md  RESEARCH_ENGINE_UNIFICATION_PROPOSAL_20260312.md  RUNTIME_STATE_DESIGN.md  STRICT_TRAINING_READINESS_CHECKLIST_2026-03-24.md  TECH_DEBT_REMEDIATION_BLUEPRINT_2026-03-25.md  TRAINING_FLOW.md  V1_5_NEXT_ROUND_CANDIDATE_CONVERGENCE_2026-03-24.md  V1_5_P1_P2_REPAIR_REPORT_2026-03-24.md  V1_5_PHASE2_CHANGE_SUMMARY_2026-03-24.md  V1_5_PHASE2_OPTIMIZATION_CHECKLIST_2026-03-24.md  V1_5_PHASE3_CANDIDATES_2026-03-24.md  V1_5_PHASE3_CHANGE_SUMMARY_2026-03-24.md  (+2 more)
frontend/: README.md  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
invest/: __init__.py  agents.py  core.py  debate.py  meetings.py  memory.py  optimization.py  trading.py
(+1626 files in other folders)
