[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "invest-evolution"
version = "1.0.0"
description = "Investment Evolution System (Commander fused runtime)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "PyYAML>=6.0",
  "litellm>=1.52",
  "baostock>=0.8.9",
  "tushare>=1.4.0",
  "akshare>=1.18.35",
  "rank-bm25>=0.2.2",
  "flask>=3.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
prod = ["gunicorn>=23.0"]

[project.scripts]
invest-commander = "app.commander:main"
invest-train = "app.train:train_main"
invest-data = "market_data.__main__:main"
invest-refresh-contracts = "app.frontend_contract_tools:main"
invest-freeze-gate = "app.freeze_gate:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["."]
addopts = "-q"

[tool.setuptools]
py-modules = [
  "commander",
  "llm_gateway",
  "llm_router",
  "train",
  "web_server",
]

[tool.setuptools.packages.find]
include = ["app*", "brain*", "market_data*", "invest*", "config*"]
